[gd_scene load_steps=6 format=3 uid="uid://borto8er3l4xv"]

[ext_resource type="Script" path="res://ui/menu/main_menu.gd" id="1_65v3q"]
[ext_resource type="PackedScene" uid="uid://ddqjd3aptdlu8" path="res://levels/level_1.tscn" id="2_4s5eu"]
[ext_resource type="Texture2D" uid="uid://dr7btnk1b7ra1" path="res://assets/sprites/menu/menuforestbackground.jpg" id="3_k6q8g"]
[ext_resource type="AudioStream" uid="uid://cavw6jjmm0gh0" path="res://assets/audios/musics/menumusic.mp3" id="4_5i5mu"]
[ext_resource type="PackedScene" uid="uid://wkku8p1vo8af" path="res://ui/menu/options_menu.tscn" id="4_8cpnl"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65v3q")
new_game_scene = ExtResource("2_4s5eu")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k6q8g")
expand_mode = 1
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="TitleLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 64
text = "Florarium
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
text = "Jogar
"
flat = true
alignment = 0

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
text = "Opções"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
text = "Fechar
"
flat = true
alignment = 0

[node name="OptionsMenu" parent="." instance=ExtResource("4_8cpnl")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5i5mu")
volume_db = -5.0
autoplay = true
bus = &"Music"
area_mask = 0

[connection signal="button_down" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
